fixed the x-axis scrollbar issue caused due to 100vw width of the components

--- a/src/components/book/Book.css
+++ b/src/components/book/Book.css
@@ -7,7 +7,7 @@
 
 .book_outer-box {
     display: flex;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     min-height: 85vh;
 }
