--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,7 +4,7 @@
 
 .footer_outer-box {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 50px;
     background: #2E1D1E 0% 0% no-repeat padding-box;
     opacity: 1;
