--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,7 +3,7 @@
 }
 
 .header_outer-box {
-    width: 100vw;
+    width: 100%;
     height: 60px;
     background: #A03037 0% 0% no-repeat padding-box;
     opacity: 1;
