--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -4,7 +4,7 @@
 
 .home_outer-box {
     display: flex;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     min-height: 85vh;
 }
